Se agrego la ubicacion de la iglesia y los regalos a pedir

--- a/invitaciones_boda.html
+++ b/invitaciones_boda.html
@@ -291,9 +291,9 @@
         <!-- Sección de portada -->
         <div class="section cover-section">
             <div class="couple-names">
-                Berenice<br>
+                Dora Berenice Carmona Castellanos<br>
                 &<br>
-                Maximiliano
+                Jose Maximiliano Retana Lopez
             </div>
             <div class="wedding-date">
                 Sabado, 31 de Enero 2026
@@ -323,12 +323,15 @@
         <div class="section">
             <div class="section-title">CEREMONIA RELIGIOSA</div>
             <div class="info-text">
-                <strong>Iglesia San Pedro</strong><br>
-                Calle Tarija y Av. América
+                <strong>Parroquia Inmaculado Corazón de María</strong><br>
+                C. Guillermo Prieto 561, Guadalajarita, 28030 Colima, Col.
             </div>
-            <button class="location-button">Ver ubicación</button>
-            <div class="photo-placeholder" style="height: 150px; margin-top: 20px;">
-                Foto de la iglesia
+            <a href="https://maps.google.com/?q=Parroquia+Inmaculado+Corazón+de+María,+C.+Guillermo+Prieto+561,+Guadalajarita,+28030+Colima,+Col." target="_blank" class="location-button" style="display: inline-block; text-decoration: none;">Ver ubicación</a>
+            <div class="photo-placeholder" style="height: 150px; margin-top: 20px; object-fit: cover; border-radius: 10px;">
+                <img src="https://drive.google.com/uc?export=view&id=1pQNCW0o_2HfSXupmHz80hPwMw5kDX1pV" 
+                    alt="Parroquia Inmaculado Corazón de María" 
+                    class="photo-placeholder" 
+                    style="height: 150px; margin-top: 20px; object-fit: cover; border-radius: 10px;">
             </div>
         </div>
 
@@ -339,7 +342,7 @@
                 <strong>Jardín Pacífico</strong><br>
                 Calle Sierra y 10 de Julio
             </div>
-            <button class="location-button">Ver ubicación</button>
+            <a href="https://maps.google.com/?q=Jardín+Pacífico,+Calle+Sierra+y+10+de+Julio,+Colima" target="_blank" class="location-button" style="display: inline-block; text-decoration: none;">Ver ubicación</a>
         </div>
 
         <!-- Código de vestimenta -->
@@ -443,9 +446,8 @@
         <div class="section">
             <div class="section-title">SUGERENCIAS Y REGALOS</div>
             <div class="info-text">
-                Su presencia en nuestra boda será el<br>
-                mejor regalo. Pero si desean darnos otro<br>
-                obsequio, les dejamos estas opciones:
+                Lo más importante para nosotros es compartir este día tan especial con ustedes.
+Si desean obsequiarnos algo, pueden unirse a nuestra <em>lluvia de sobres</em> para ayudarnos a comenzar esta nueva etapa juntos.
             </div>
             <div class="qr-placeholder">
                 QR
