--- a/invitaciones_boda.html
+++ b/invitaciones_boda.html
@@ -5,329 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitación de Boda</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@300;400;600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background: linear-gradient(135deg, #a8b8a0, #8ea085);
-            font-family: 'Open Sans', sans-serif;
-            padding: 20px;
-            min-height: 100vh;
-        }
-
-        .invitation-container {
-            max-width: 400px;
-            margin: 0 auto;
-            background: #f8f6f3;
-            border-radius: 0;
-            overflow: hidden;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-            position: relative;
-        }
-
-        .leaf-decoration {
-            position: absolute;
-            opacity: 0.3;
-            z-index: 1;
-        }
-
-        .leaf-top-right {
-            top: 20px;
-            right: 20px;
-            width: 60px;
-            height: 40px;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 60"><path d="M10,30 Q50,5 90,30 Q50,55 10,30" fill="%23a8b8a0"/></svg>');
-        }
-
-        .leaf-bottom-left {
-            bottom: 20px;
-            left: 20px;
-            width: 50px;
-            height: 35px;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 60"><path d="M10,30 Q50,5 90,30 Q50,55 10,30" fill="%238ea085"/></svg>');
-            transform: rotate(180deg);
-        }
-
-        .section {
-            padding: 30px;
-            text-align: center;
-            position: relative;
-            z-index: 2;
-            border-bottom: 1px solid #e8e6e3;
-        }
-
-        .section:last-child {
-            border-bottom: none;
-        }
-
-        .cover-section {
-            padding: 60px 30px;
-            background: linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="30" fill="none" stroke="%23a8b8a0" stroke-width="0.5" opacity="0.3"/></svg>');
-        }
-
-        .couple-names {
-            font-family: 'Dancing Script', cursive;
-            font-size: 4.2em; /* Aumentado de 3.2em */
-            color: #5a6b52;
-            margin-bottom: 30px; /* Aumentado de 20px */
-            line-height: 1.1;
-            font-weight: 700; /* Agregado para más peso */
-            text-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Sombra sutil */
-        }
-
-        .couple-names-title {
-            font-family: 'Playfair Display', serif; /* Cambio de Arial */
-            font-size: 1.2em; /* Reducido de 1.6em */
-            color: #8a9481; /* Color más suave */
-            margin-bottom: 15px; /* Reducido de 20px */
-            line-height: 1.2;
-            font-weight: 400;
-            letter-spacing: 1px;
-            text-transform: uppercase; /* Agregado */
-        }
-
-        .couple-names-parents {
-            font-family: 'Open Sans', sans-serif; /* Cambio de Arial */
-            font-size: 0.85em; /* Reducido significativamente de 1.6em */
-            color: #8a9481; /* Color más suave que los nombres */
-            margin-bottom: 25px;
-            line-height: 1.4;
-            font-weight: 300; /* Más ligero */
-            opacity: 0.9; /* Ligeramente transparente */
-        }
-
-        .wedding-date {
-            font-family: 'Playfair Display', serif;
-            font-size: 1.1em;
-            color: #7a8471;
-            font-weight: 300;
-            letter-spacing: 1px;
-        }
-
-        .quote-section {
-            background: #f0efe8;
-            font-style: italic;
-            color: #6b7a62;
-        }
-
-        .quote-text {
-            font-size: 1em;
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-
-        .quote-author {
-            font-size: 0.9em;
-            color: #8a9481;
-        }
-
-        .section-title {
-            font-family: 'Playfair Display', serif;
-            font-size: 1.3em;
-            color: #5a6b52;
-            margin-bottom: 20px;
-            font-weight: 600;
-            letter-spacing: 0.5px;
-        }
-
-        .info-text {
-            color: #6b7a62;
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-
-        .location-button {
-            background: #a8b8a0;
-            color: white;
-            padding: 10px 25px;
-            border: none;
-            border-radius: 25px;
-            font-size: 0.9em;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background 0.3s;
-        }
-
-        .location-button:hover {
-            background: #8ea085;
-        }
-
-        .dress-code-icons {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin: 20px 0;
-        }
-
-        .icon-placeholder {
-            width: 40px;
-            height: 60px;
-            background: #a8b8a0;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.5em;
-        }
-
-        .timeline-item {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin: 15px 0;
-            padding: 10px 0;
-            border-bottom: 1px solid #e8e6e3;
-        }
-
-        .timeline-time {
-            font-weight: 600;
-            color: #5a6b52;
-            min-width: 60px;
-        }
-
-        .timeline-event {
-            flex: 1;
-            text-align: left;
-            margin-left: 20px;
-            color: #6b7a62;
-        }
-
-        .countdown-section {
-            background: #f0efe8;
-        }
-
-        .countdown-timer {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        .countdown-unit {
-            text-align: center;
-        }
-
-        .countdown-number {
-            font-family: 'Playfair Display', serif;
-            font-size: 2em;
-            font-weight: 600;
-            color: #5a6b52;
-            display: block;
-        }
-
-        .countdown-label {
-            font-size: 0.8em;
-            color: #8a9481;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .rsvp-section {
-            background: #a8b8a0;
-            color: white;
-        }
-
-        .rsvp-section .section-title {
-            color: white;
-        }
-
-        .rsvp-section .info-text {
-            color: rgba(255,255,255,0.9);
-        }
-
-        .qr-placeholder {
-            width: 80px;
-            height: 80px;
-            background: white;
-            margin: 20px auto;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #a8b8a0;
-            font-weight: bold;
-        }
-
-        .final-message {
-            font-family: 'Dancing Script', cursive;
-            font-size: 1.8em;
-            color: white;
-            margin-top: 20px;
-        }
-
-        .photo-placeholder {
-            width: 100%;
-            height: 200px;
-            background: #e8e6e3;
-            border-radius: 10px;
-            margin: 20px 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #a8b8a0;
-            font-size: 1.2em;
-        }
-
-        /* Estilos para la sección de padrinos */
-        .padrinos-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        .padrino-item {
-            text-align: center;
-            padding: 15px;
-            background: #f8f7f4;
-            border-radius: 8px;
-            border: 1px solid #e8e6e3;
-        }
-
-        .padrino-tipo {
-            font-weight: 600;
-            color: #5a6b52;
-            font-size: 0.9em;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 8px;
-        }
-
-        .padrino-nombres {
-            font-family: 'Dancing Script', cursive;
-            font-size: 1.3em;
-            color: #6b7a62;
-        }
-
-        /* Estilos específicos para imágenes de la pareja */
-        .couple-photo {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-            object-position: center center;
-            border-radius: 10px;
-            display: block;
-            margin: 20px 0;
-        }
-
-        .couple-photo-container {
-            width: 100%;
-            height: 300px;
-            border-radius: 10px;
-            overflow: hidden;
-            margin: 20px 0;
-        }
-        
-        /* Ajuste para la sección de foto */
-        .photo-section {
-            padding: 20px 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="boda.css">
 </head>
 <body>
     <div class="invitation-container">
@@ -348,14 +26,15 @@
             <div class="couple-names-parents">
                 Con la bendición de Dios<br>
                 Y de nuestros padres<br>
-                Padres de la Novia:<br>
+                <br>
+                <span class="parents-label">Padres de la Novia:</span><br>
                 José Porfirio Carmona Santiago & Ma. Mercedes Castellanos Iñiguez<br>
-                Padres del Novio:<br>
+                <br>
+                <span class="parents-label">Padres del Novio:</span><br>
                 José Navidad Retana Rodriguez & Ana Lilia Lopez Armenta<br>
-                
             </div>
             <div class="wedding-date">
-                Sabado, 31 de Enero 2026
+                Sábado, 31 de Enero 2026
             </div>
         </div>
 
