Mejora en el sobre

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="envelope-front"></div>
             <div class="envelope-flap"></div>
             <div class="envelope-seal">
-                <div class="heart">♥</div>
+                <div class="heart">B & M</div>
             </div>
         </div>
         
