Cambio de Falta a Cuenta Regresiva

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <!-- Cuenta regresiva -->
         <div class="section countdown-section">
-            <div class="section-title">FALTAN</div>
+            <div class="section-title">CUENTA REGRESIVA</div>
             <div class="countdown-timer">
                 <div class="countdown-unit">
                     <span class="countdown-number">00</span>
